delete method in swagger
